--- a/templates/configuration.xml
+++ b/templates/configuration.xml
@@ -8,6 +8,15 @@
 	<element type="auto" size="1" name="bConfigurationValue" method="indexOfDescriptor" base="1" />
 	<element type="link" size="1" name="iConfiguration" linktype="stringIndex" />
 	<element type="variable" size="1" name="bDeviceProtocol" value="0" />
-	<element type="variable" size="1" name="bmAttributes" value="0" />
+	<element type="bitmap" size="1" name="bmAttributes" value="0">
+		<bitmap type="enum" size="1" offset="5" name="Remote Wakeup">
+			<item name="No">0</item>
+			<item name="Yes">1</item>
+		</bitmap>
+		<bitmap type="enum" size="1" offset="6" name="Self-powered">
+			<item name="No">0</item>
+			<item name="Yes">1</item>
+		</bitmap>
+	</element>
 	<element type="variable" size="1" name="bMaxPower" value="0" />
 </descriptor>
